# feature-matching-native-android

./: .gitattributes  .gitignore  README.md  build.gradle  gradle.properties  import-summary.txt  settings.gradle
.github/workflows/: release_build.yml  update_opencv.yml
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/be/pxl/troger/nativeAR/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_opencv.cpp
app/src/main/java/be/pxl/troger/nativeAR/: MyActivity.java
app/src/main/java/be/pxl/troger/nativeAR/tools/: CameraManager.java
app/src/main/java/be/pxl/troger/nativeAR/views/: CameraPreviewView.java
app/src/main/java/com/michaeltroger/featureMatchingNative/: MyActivity.java  MyActivity.kt
app/src/main/java/com/michaeltroger/featureMatchingNative/tools/: CameraManager.java  CameraManager.kt
app/src/main/java/com/michaeltroger/featureMatchingNative/views/: CameraPreviewView.java  CameraPreviewView.kt
app/src/main/jni/: native_opencv.cpp
app/src/main/res/layout/: activity_my.xml
app/src/main/res/values/: strings.xml
app/src/test/java/ch/hepia/lsn/opencv_native_androidstudio/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary300/: build.gradle
openCVLibrary300/src/main/: AndroidManifest.xml
opencv-3-4-15/: build.gradle
